Remove 400px media query rule for .wrap to try to fix right padding.

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -376,7 +376,4 @@ iframe {
     font-size: 3em;
   }
 
-  .wrap {
-    width: 90%;
-  }
 }
